[package]
name = "ironcrypt"
version = "0.1.0"
authors = ["Paterne G. G."]
edition = "2021"
description = "A Rust library for secure password hashing, RSA key generation, and managing the encryption and verification of passwords and binary files."
keywords = ["cryptography", "RSA", "AES", "security", "Rust"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"
documentation = "https://github.com/teamflp/ironcrypt#readme"
repository = "https://github.com/teamflp/ironcrypt"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
argon2 = "0.5.3"
base64 = "0.22.1"
rsa = { version = "0.9.6", features = ["pem"] }
serde_json = "1.0"
sha2 = "0.10.6"
rand = "0.9.0"
rand_core = "0.9.1"
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "1.0.64"
indicatif = "0.17.8"
aes-gcm = "0.10.3"
aes = "0.8"
cipher = "0.4.4" # For symmetric encryption
unicode-general-category = "1.0.0"
zeroize = "1.8.1"
tar = "0.4.44"
flate2 = "1.0.30"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lib]
name = "ironcrypt"
path = "src/lib.rs"

[[bin]]
name = "ironcrypt"
path = "src/main.rs"
