[package]
name = "ironcrypt"
version = "0.1.0"
authors = ["Paterne G. G."]
edition = "2021"
description = "A Rust library for secure password hashing, RSA key generation, and managing the encryption and verification of passwords and binary files."
keywords = ["cryptography", "RSA", "AES", "security", "Rust"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ironcrypt"
repository = "https://github.com/teamflp/ironcrypt"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
argon2 = "0.5.3"
base64 = "0.22.1"
rsa = { version = "0.9.6", features = ["pem"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
serde_json = "1.0"
sha2 = "0.10.6"
rand_core = "0.9.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
thiserror = "2.0.12"
indicatif = "0.18.0"
aes-gcm = "0.10.3"
cipher = "0.4.4" # For symmetric encryption
unicode-general-category = "1.0.0"
zeroize = "1.8.1"
tar = "0.4.44"
flate2 = "1.0.30"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
tempfile = "3.20.0"
aes-gcm-stream = "0.2.4"
byteorder = "1.5.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "getrandom"] }
vaultrs = "0.7.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
aws-config = "1.1.7"
aws-sdk-secretsmanager = "1.2.0"
azure_security_keyvault_secrets = "0.6.0"
azure_identity = "0.27.0"
google-cloud-secretmanager-v1 = "0.4.4"
google-cloud-auth = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.8.5"
sha2 = "0.10.8"
mockall = "0.12"
tempfile = "3.20.0"

[lib]
name = "ironcrypt"
path = "src/lib.rs"

[[bin]]
name = "ironcrypt"
path = "src/main.rs"
