[package]
name = "ironcrypt"
version = "0.1.0"
authors = ["Paterne G. G."]
edition = "2021"
description = "A Rust library for secure password hashing, RSA key generation, and managing the encryption and verification of passwords and binary files."
keywords = ["cryptography", "RSA", "AES", "security", "Rust"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ironcrypt"
repository = "https://github.com/teamflp/ironcrypt"

[dependencies]
# Core dependencies - always included
serde = { version = "1.0.210", features = ["derive"] }
argon2 = "0.5.3"
base64 = "0.22.1"
rsa = { version = "0.9.6", features = ["pem"] }
pkcs8 = { version = "0.10.2", features = ["pem", "encryption"] }
serde_json = "1.0"
sha2 = "0.10.6"
thiserror = "2.0.12"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
elliptic-curve = "0.13.8"
hkdf = "0.12.3"
cipher = "0.4.4" # For symmetric encryption
unicode-general-category = "1.0.0"
zeroize = "1.8.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
aes-gcm-stream = "0.2.4"
byteorder = "1.5.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "getrandom"] }
vaultrs = "0.7.4"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
async-trait = "0.1"

# --- Optional Dependencies ---

# CLI feature
clap = { version = "4.5.20", features = ["derive", "env"], optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.0.30", optional = true }
tempfile = { version = "3.20.0", optional = true }

# Interactive feature (for CLI progress bars)
indicatif = { version = "0.18.0", optional = true }

# Daemon feature
axum = { version = "0.7.5", features = ["ws", "macros", "json"], optional = true }
tower-http = { version = "0.5.2", features = ["cors", "trace"], optional = true }
tokio-util = { version = "0.7.11", features = ["io-util"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
futures = { version = "0.3", optional = true }

# AWS feature
aws-config = { version = "1.1.7", optional = true }
aws-sdk-secretsmanager = { version = "1.2.0", optional = true }

# Azure feature
azure_security_keyvault_secrets = { version = "0.6.0", optional = true }
azure_identity = { version = "0.27.0", optional = true }

# Google Cloud feature
google-cloud-secretmanager-v1 = { version = "0.4.4", optional = true }
google-cloud-auth = { version = "0.22.3", optional = true }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.8.5"
sha2 = "0.10.8"
mockall = "0.12"
tempfile = "3.20.0"

[lib]
name = "ironcrypt"
path = "src/lib.rs"

[[bin]]
name = "ironcrypt"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "ironcryptd"
path = "src/bin/daemon.rs"
required-features = ["daemon"]

[[test]]
name = "standards_test"
path = "tests/standards_test.rs"
harness = true

[features]
default = ["full"]

# Meta features
full = ["cli", "daemon", "cloud", "interactive"]
cloud = ["aws", "azure", "gcp"]

# CLI features
cli = ["dep:clap", "dep:tar", "dep:flate2", "dep:tempfile"]
interactive = ["dep:indicatif", "cli"]

# Daemon features
daemon = [
  "dep:axum",
  "dep:tower-http",
  "dep:tokio-util",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:futures",
  "tokio/net",
  "tokio/io-util",
  "dep:clap",
]

# Cloud provider features
aws = ["dep:aws-config", "dep:aws-sdk-secretsmanager"]
azure = ["dep:azure_security_keyvault_secrets", "dep:azure_identity"]
gcp = ["dep:google-cloud-secretmanager-v1", "dep:google-cloud-auth"]